cycles resumable num chunks breaks sample count with negative counts #48185

Closed
opened 2016-04-18 12:21:48 +02:00 by Martijn Berger · 5 comments
Member

System Information
Linux x64 (buntu 15.10)

Blender Version
Broken: (f8b9f4e9 and higher)

Short description of error

Exact steps for others to reproduce the error

blender -b ~/Downloads/BMW1M-MikePan.blend -f 0 -- --cycles-resumable-num-chunks 24 --cycles-resumable-current-chunk 0

http://hastebin.com/opetogabed

**System Information** Linux x64 (buntu 15.10) **Blender Version** Broken: (f8b9f4e9 and higher) **Short description of error** **Exact steps for others to reproduce the error** blender -b ~/Downloads/BMW1M-MikePan.blend -f 0 -- --cycles-resumable-num-chunks 24 --cycles-resumable-current-chunk 0 http://hastebin.com/opetogabed
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MartijnBerger

Added subscriber: @MartijnBerger
Sergey Sharybin was assigned by Martijn Berger 2016-04-18 12:22:40 +02:00

This issue was referenced by 9b48f2b27c

This issue was referenced by 9b48f2b27c0f64c7f8cc452ad3820f705c15495d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@da5dbdaba2

This issue was referenced by blender/cycles@da5dbdaba2efadb9af092f035158a071f7e68cea
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48185
No description provided.