intern/cycles/blender/blender_python.cpp
@@ -644,7 +644,20 @@ static PyObject *set_resumable_chunks_func(PyObject * /*self*/, PyObject *args)
 	if(!PyArg_ParseTuple(args, "ii",
 	                     &num_resumable_chunks,
 	                     &current_resumable_chunk)) {
-		return NULL;
+		Py_RETURN_NONE;
+	}
+
+	if(num_resumable_chunks <= 0) {
+		fprintf(stderr, "Cycles: Bad value for number of resumable chunks.\n");
+		abort();
+		Py_RETURN_NONE;
+	}
+	if(current_resumable_chunk < 1 ||
+	   current_resumable_chunk > num_resumable_chunks)
+	{
+		fprintf(stderr, "Cycles: Bad value for current resumable chunk number.\n");
+		abort();
+		Py_RETURN_NONE;
 	}
 
 	VLOG(1) << "Initialized resumable render: "
@@ -652,6 +665,10 @@ static PyObject *set_resumable_chunks_func(PyObject * /*self*/, PyObject *args)
 	        << "current_resumable_chunk=" << current_resumable_chunk;
 	BlenderSession::num_resumable_chunks = num_resumable_chunks;
 	BlenderSession::current_resumable_chunk = current_resumable_chunk;
+
+	printf("Cycles: Will render chunk %d of %d\n",
+	       current_resumable_chunk,
+	       num_resumable_chunks);
 
 	Py_RETURN_NONE;
 }
